# hiearch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: master.yml  tag.yml  tag_dinit.yml
generators/hiearch_dinit/: .gitignore  Makefile  README.md  pyproject.toml
generators/hiearch_dinit/src/hiearch_dinit/: __init__.py  hiearch_dinit.py
generators/hiearch_dinit/src/hiearch_dinit/data/styles/: dinit_service.yaml
generators/hiearch_dinit/test/01_basic/output/: graph.yaml
generators/hiearch_dinit/test/02_complex_deps/output/: graph.yaml
generators/hiearch_dinit/test/02_complex_deps/services/: scripted_service
generators/hiearch_dinit/test/03_parametrized/output/: graph.yaml  style.yaml
generators/hiearch_dinit/test/03_parametrized/services/: dependent_service
generators/hiearch_dinit/test/04_style_gen/output/: style.yaml
generators/hiearch_dinit/test/05_chain_to/services/: service_a  service_b
generators/hiearch_dinit/test/06_common_suffix/dir2_common/: service2
hiearch/: __init__.py  hh_edge.py  hh_view.py  hiearch.py
src/hiearch/: __init__.py  graphviz.py  graphviz_input.py  graphviz_output.py  hh_edge.py  hh_node.py  hh_view.py  hiearch.py  output.py  util.py
test/01_basic/: 01_basic.yaml  direct.gv  explicit.gv  parent.gv
test/02_default_view/: 02_default_view.yaml  default.gv
test/03_default_view_split/: 03_default_view_split1.yaml  03_default_view_split2.yaml  default.gv
test/04_node_cycle/: 04_node_cycle.yaml
test/05_style_cycle/: 05_style_cycle.yaml
test/06_multiscope/: 06_multiscope.yaml  autoranking.gv  default.gv
test/07_trivial/: input.yaml  view1.gv
test/08_node_realations/: input.yaml  view1.gv  view2.gv  view3.gv
test/09_tags/: input.yaml  view1.gv  view2.gv
test/10_minimal/: default.gv  input.yaml
test/11_neighbors/: direct.gv  direct_with_parents.gv  explicit.gv  input.yaml  parent.gv  recursive_in.gv  recursive_in_c.gv  recursive_out.gv  view1.gv  view2.gv  view3.gv  view4.gv
test/12_view_style/: input.yaml  plain.gv  styled.gv
test/13_edge_labels/: input.yaml  view1.gv  view2.gv
test/14_edge_style/: input.yaml  view1.gv  view2.gv  view3.gv
test/15_formatted_labels/: input.yaml  view1.gv  view2.gv  view3.gv
test/16_state_machine/: example.yaml  state_machine_example.gv  state_machine_style_nodes.gv
test/17_use_case/: example.yaml  use_case_example.gv  use_case_style_nodes.gv
test/18_style_notag/: input.yaml  view_with_notag.gv  view_with_style1.gv  view_with_style2.gv
test/19_style_notag_cycle/: input.yaml
test/20_mixed_style_cycle/: input.yaml
test/21_dinit_service_style/: dinit_service_all.gv  dinit_service_example.gv  dinit_service_expanded.gv  dinit_service_expanded_cdinit_log_expand_recursive_in.gv  dinit_service_expanded_cdinit_log_expand_recursive_out.gv  dinit_service_expanded_cdinit_log_recursive_in.gv  dinit_service_expanded_cdinit_log_recursive_out.gv  dinit_service_expanded_cdinit_ros2_bag_expand_recursive_in.gv  (+44 more)
test/22_style_notag_tag_inheritance/: input.yaml  (+2 more)
(+178 files in other folders)
