[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiearch-dinit"
version = "0.1.0"

authors = [
    { name="Alexander Sherikov", email="asherikov@yandex.com" },
]

description = "Parse dinit service files and generate a dependency graph in hiearch YAML format"

readme = "README.md"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]

requires-python = ">=3.8"

dependencies = [
    "pyyaml",
    "importlib-resources",
]

[project.scripts]
hiearch_dinit = "hiearch_dinit.hiearch_dinit:main"

[project.urls]
Homepage = "https://github.com/asherikov/hiearch"
Issues = "https://github.com/asherikov/hiearch/issues"

[tool.hatch.build.targets.wheel.sources]
"src/hiearch_dinit" = "hiearch_dinit"

[tool.hatch.build]
include = [
    "hiearch_dinit",
    "src/hiearch_dinit/**/*",
]